--- a/index.html
+++ b/index.html
@@ -6,69 +6,14 @@
     <title>PPMarket</title>
 </head>
 <body>
-    <header>
-        <h1 id="inicio">PPMarket</h1>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Início</a></li>
-                <li><a href="#produtos">Produtos</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-        <hr>
-    </header>
-    <main>
-        <h2 id="produtos">Produtos</h2>
-
-        <h3>Frutas e Verduras</h3>
-        <div>
-            <img src="imagens/maca_vermelha.webp" alt="Maçã Vermelha" width="150">
-            <p>Maçã Vermelha - R$ 5,99/kg</p>
-        </div>
-        <div>
-            <img src="imagens/alface_crespa.webp" alt="Alface Crespa" width="150">
-            <p>Alface Crespa - R$ 2,50/unidade</p>
-        </div>
-
-        <h3>Produtos Alimentícios Não Perecíveis</h3>
-        <div>
-            <img src="imagens/arroz_branco.webp" alt="Arroz Branco" width="150">
-            <p>Arroz Branco - R$ 22,90/5kg</p>
-        </div>
-        <div>
-            <img src="imagens/feijao_carioca.webp" alt="Feijão Carioca" width="150">
-            <p>Feijão Carioca - R$ 8,99/kg</p>
-        </div>
-
-        <h3>Produtos de Higiene e Limpeza</h3>
-        <div>
-            <img src="imagens/sabonete.webp" alt="Sabonete" width="150">
-            <p>Sabonete Neutro - R$ 1,50/unidade</p>
-        </div>
-        <div>
-            <img src="imagens/detergente.webp" alt="Detergente Líquido" width="150">
-            <p>Detergente Líquido - R$ 2,20/unidade</p>
-        </div>
-
-        <h2 id="servicos">Serviços</h2>
-        <div>
-            <p>Retirada no local <blockquote>Você faz o pedido online e retira diretamente na loja, sem taxa extra.</blockquote><blockquote>Valor: Gratuito</blockquote></p>
-        </div>
-        <div>
-            <p>Tele-entrega <blockquote>Entregamos suas compras no conforto da sua casa, com rapidez e segurança.</blockquote><blockquote>Valor: A partir de R$ 5,99, dependendo da região</blockquote></p>
-        </div>
-    </main>
-    <footer>
-        <hr>
-        <p>&copy; 2025 PPMarket - Todos os direitos reservados.</p>
-        <p id="contato">Contato: (54) 99999-9999 | contato@ppmarket.com</p>
-        <nav>
-            <a href="#inicio">Início</a> |
-            <a href="#produtos">Produtos</a> |
-            <a href="#servicos">Serviços</a> |
-            <a href="#contato">Contato</a>
-        </nav>
-    </footer>
+    <div class="menu_login">
+        <form action="main.html" method="get">
+        <h1>Entre para continuar!</h1>
+        <h2>Se não for cliente, se <a href="cadastro.html">cadastre</a></h2>
+        <input id="email" type="email" placeholder="Digite seu e-mail" />
+        <input id="senha" type="password" placeholder="Digite sua senha" />
+        <button type="submit">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
