Atualiza cadastro.html e README.md

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="menu_cadastro">
-        <form action="index.html" method="get">
+        <form action="main.html" method="get">
         <h1>Se cadastre!</h1>
         <input id="cpf" type="text" inputmode="numeric" pattern="\d{11}" placeholder="Digite seu CPF" />
         <input id="email" type="email" placeholder="Digite seu e-mail" />
