--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PPMarket</title>
-</head>
-<body>
-    <div class="menu_login">
-        <form action="main.html" method="get">
-        <h1>Entre para continuar!</h1>
-        <h2>Se não for cliente, se <a href="cadastro.html">cadastre</a></h2>
-        <input id="email" type="email" placeholder="Digite seu e-mail" />
-        <input id="senha" type="password" placeholder="Digite sua senha" />
-        <button type="submit">Entrar</button>
-        </form>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PPMarket - Login</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="login-cadastro.css" />
+  </head>
+  <body
+    class="d-flex align-items-center justify-content-center vh-100 bg-light"
+  >
+    <div class="card shadow-lg p-4 rounded-4 auth-card">
+      <h1 class="text-center text-success mb-3">Bem-vindo de volta!</h1>
+      <form action="main.html" method="get">
+        <div class="mb-3">
+          <label for="email" class="form-label">E-mail</label>
+          <input
+            id="email"
+            type="email"
+            class="form-control"
+            placeholder="Digite seu e-mail"
+            required
+            aria-required="true"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="senha" class="form-label">Senha</label>
+          <input
+            id="senha"
+            type="password"
+            class="form-control"
+            placeholder="Digite sua senha"
+            required
+            aria-required="true"
+          />
+        </div>
+
+        <button type="submit" class="btn btn-success w-100">Entrar</button>
+      </form>
+      <p class="text-center mt-3">
+        Não tem conta?
+        <a href="cadastro.html" class="text-danger fw-bold">Cadastre-se</a>
+      </p>
     </div>
-</body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
