--- a/index.html
+++ b/index.html
@@ -3,50 +3,369 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PPMarket - Login</title>
+    <title>PPMarket</title>
+    <link rel="stylesheet" href="index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="login-cadastro.css" />
   </head>
-  <body
-    class="d-flex align-items-center justify-content-center vh-100 bg-light"
-  >
-    <div class="card shadow-lg p-4 rounded-4 auth-card">
-      <h1 class="text-center text-success mb-3">Bem-vindo de volta!</h1>
-      <form action="main.html" method="get">
-        <div class="mb-3">
-          <label for="email" class="form-label">E-mail</label>
-          <input
-            id="email"
-            type="email"
-            class="form-control"
-            placeholder="Digite seu e-mail"
-            required
-            aria-required="true"
-          />
+  <body class="bg-light">
+    <!-- Navbar -->
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow"
+    >
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#inicio">PPMarket</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#inicio">Início</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#produtos">Produtos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#servicos">Serviços</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cadastro">Cadastro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#agendamento">Agendamento</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contato">Contato</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cadastro.html">Cadastrar</a>
+            </li>
+          </ul>
         </div>
-        <div class="mb-3">
-          <label for="senha" class="form-label">Senha</label>
-          <input
-            id="senha"
-            type="password"
-            class="form-control"
-            placeholder="Digite sua senha"
-            required
-            aria-required="true"
-          />
-        </div>
+      </div>
+    </nav>
 
-        <button type="submit" class="btn btn-success w-100">Entrar</button>
-      </form>
-      <p class="text-center mt-3">
-        Não tem conta?
-        <a href="cadastro.html" class="text-danger fw-bold">Cadastre-se</a>
-      </p>
+    <!-- CARROSSEL -->
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner rounded-4 shadow">
+        <div class="carousel-item active">
+          <img
+            src="imagens/bem_vindo.jpg"
+            class="d-block w-100"
+            alt="Supermercado com frutas frescas"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Bem-vindo ao PPMarket</h5>
+            <p>Qualidade e preço justo para sua família</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="imagens/frutas_frescas.jpg"
+            class="d-block w-100"
+            alt="Variedade de frutas"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Frutas e verduras fresquinhas</h5>
+            <p>Direto da horta para sua mesa</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="imagens/oferta_da_semana.jpg"
+            class="d-block w-100"
+            alt="Ofertas da semana"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Ofertas imperdíveis</h5>
+            <p>Aproveite nossas promoções exclusivas</p>
+          </div>
+        </div>
+      </div>
+
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Produtos -->
+    <main class="container my-5">
+      <h2 id="produtos" class="text-success mb-4">Nossos Produtos</h2>
+
+      <!-- Frutas e Verduras -->
+      <h4 class="text-muted">Frutas e Verduras</h4>
+      <div class="row g-4 mb-5">
+        <div class="col-md-3">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="imagens/maca_vermelha.webp"
+              class="card-img-top"
+              alt="Maçã Vermelha"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">Maçã Vermelha</h5>
+              <p class="text-success fw-bold">R$ 5,99/kg</p>
+              <button class="btn btn-danger w-100">
+                Adicionar ao Carrinho
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="imagens/alface_crespa.webp"
+              class="card-img-top"
+              alt="Alface Crespa"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">Alface Crespa</h5>
+              <p class="text-success fw-bold">R$ 2,50/unidade</p>
+              <button class="btn btn-danger w-100">
+                Adicionar ao Carrinho
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Não Perecíveis -->
+      <h4 class="text-muted">Alimentos Não Perecíveis</h4>
+      <div class="row g-4 mb-5">
+        <div class="col-md-3">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="imagens/arroz_branco.webp"
+              class="card-img-top"
+              alt="Arroz Branco"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">Arroz Branco</h5>
+              <p class="text-success fw-bold">R$ 22,90/5kg</p>
+              <button class="btn btn-danger w-100">
+                Adicionar ao Carrinho
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="imagens/feijao_carioca.webp"
+              class="card-img-top"
+              alt="Feijão Carioca"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">Feijão Carioca</h5>
+              <p class="text-success fw-bold">R$ 8,99/kg</p>
+              <button class="btn btn-danger w-100">
+                Adicionar ao Carrinho
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Higiene -->
+      <h4 class="text-muted">Higiene e Limpeza</h4>
+      <div class="row g-4 mb-5">
+        <div class="col-md-3">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="imagens/sabonete.webp"
+              class="card-img-top"
+              alt="Sabonete"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">Sabonete Neutro</h5>
+              <p class="text-success fw-bold">R$ 1,50/unidade</p>
+              <button class="btn btn-danger w-100">
+                Adicionar ao Carrinho
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card h-100 shadow-sm">
+            <img
+              src="imagens/detergente.webp"
+              class="card-img-top"
+              alt="Detergente Líquido"
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title">Detergente Líquido</h5>
+              <p class="text-success fw-bold">R$ 2,20/unidade</p>
+              <button class="btn btn-danger w-100">
+                Adicionar ao Carrinho
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- SERVIÇOS -->
+      <section id="servicos" class="mb-5">
+        <h2 class="text-success">Serviços</h2>
+        <div class="mt-3">
+          <h5>Retirada no local</h5>
+          <blockquote class="blockquote">
+            Você faz o pedido online e retira diretamente na loja.
+          </blockquote>
+          <p><span class="badge bg-success">Gratuito</span></p>
+        </div>
+        <div class="mt-3">
+          <h5>Tele-entrega</h5>
+          <blockquote class="blockquote">
+            Entregamos suas compras no conforto da sua casa.
+          </blockquote>
+          <p><span class="badge bg-danger">A partir de R$ 5,99</span></p>
+        </div>
+      </section>
+      <!-- CADASTRO DE CLIENTE -->
+      <section id="cadastro" class="mb-5">
+        <h2 class="text-success">Cadastro de Cliente</h2>
+        <form class="row g-3 mt-3">
+          <div class="col-md-6">
+            <label for="nome" class="form-label">Nome completo</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nome"
+              placeholder="Digite seu nome"
+              required
+            />
+          </div>
+          <div class="col-md-6">
+            <label for="cpf" class="form-label">CPF</label>
+            <input
+              type="text"
+              class="form-control"
+              id="cpf"
+              pattern="\d{11}"
+              placeholder="Somente números"
+              required
+            />
+          </div>
+          <div class="col-md-6">
+            <label for="endereco" class="form-label">Endereço</label>
+            <input
+              type="text"
+              class="form-control"
+              id="endereco"
+              placeholder="Rua, nº, bairro"
+              required
+            />
+          </div>
+          <div class="col-md-6">
+            <label for="telefone" class="form-label">Telefone</label>
+            <input
+              type="tel"
+              class="form-control"
+              id="telefone"
+              placeholder="(XX) XXXXX-XXXX"
+              required
+            />
+          </div>
+          <div class="col-md-6">
+            <label for="email" class="form-label">E-mail</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Digite seu e-mail"
+              required
+            />
+          </div>
+          <div class="col-md-6">
+            <label class="form-label">Sexo</label><br />
+            <input type="radio" id="masc" name="sexo" value="M" required />
+            <label for="masc">Masculino</label>
+            <input type="radio" id="fem" name="sexo" value="F" class="ms-3" />
+            <label for="fem">Feminino</label>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-success">Cadastrar</button>
+          </div>
+        </form>
+      </section>
+
+      <!-- AGENDAMENTO -->
+      <section id="agendamento" class="mb-5">
+        <h2 class="text-success">Agendamento</h2>
+        <form class="mt-3">
+          <div class="mb-3">
+            <label for="tipoServico" class="form-label"
+              >Escolha o serviço</label
+            >
+            <select
+              id="tipoServico"
+              class="form-select"
+              onchange="toggleEndereco()"
+            >
+              <option value="retirada">Retirada no local</option>
+              <option value="entrega">Tele-entrega</option>
+            </select>
+          </div>
+          <div id="enderecoEntrega" class="mb-3 d-none">
+            <label for="enderecoAgendamento" class="form-label"
+              >Endereço para entrega</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="enderecoAgendamento"
+              placeholder="Digite o endereço"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="data" class="form-label">Data</label>
+            <input type="date" id="data" class="form-control" required />
+          </div>
+          <div class="mb-3">
+            <label for="hora" class="form-label">Horário</label>
+            <input type="time" id="hora" class="form-control" required />
+          </div>
+          <button type="submit" class="btn btn-danger">
+            Confirmar Agendamento
+          </button>
+        </form>
+      </section>
+    </main>
+
+    <!-- RODAPÉ -->
+    <footer class="bg-dark text-light text-center py-3">
+      <p>&copy; 2025 PPMarket - Todos os direitos reservados</p>
+      <p id="contato">Contato: (54) 99999-9999 | contato@ppmarket.com</p>
+      <p id="horaAtual"></p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
