--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PPMarket - Cadastro</title>
+    <title>PPMarket - Login</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,25 +14,8 @@
     class="d-flex align-items-center justify-content-center vh-100 bg-light"
   >
     <div class="card shadow-lg p-4 rounded-4 auth-card">
-      <h1 class="text-center text-success mb-4">Crie sua conta</h1>
+      <h1 class="text-center text-success mb-3">Bem-vindo de volta!</h1>
       <form action="index.html" method="get">
-        <div class="mb-3">
-          <label for="cpf" class="form-label">CPF</label>
-          <input
-            id="cpf"
-            type="text"
-            class="form-control"
-            inputmode="numeric"
-            pattern="\d{11}"
-            placeholder="Digite seu CPF"
-            required
-            aria-describedby="cpfHelp"
-          />
-          <small id="cpfHelp" class="form-text text-muted"
-            >Digite apenas números, sem pontos ou traços.</small
-          >
-        </div>
-
         <div class="mb-3">
           <label for="email" class="form-label">E-mail</label>
           <input
@@ -44,7 +27,6 @@
             aria-required="true"
           />
         </div>
-
         <div class="mb-3">
           <label for="senha" class="form-label">Senha</label>
           <input
@@ -57,23 +39,11 @@
           />
         </div>
 
-        <div class="mb-3">
-          <label for="confirma_senha" class="form-label">Confirmar Senha</label>
-          <input
-            id="confirma_senha"
-            type="password"
-            class="form-control"
-            placeholder="Confirme sua senha"
-            required
-            aria-required="true"
-          />
-        </div>
-
-        <button type="submit" class="btn btn-danger w-100">Cadastrar</button>
+        <button type="submit" class="btn btn-success w-100">Entrar</button>
       </form>
       <p class="text-center mt-3">
-        Já tem conta?
-        <a href="index.html" class="text-success fw-bold">Entre aqui</a>
+        Não tem conta?
+        <a href="cadastro.html" class="text-danger fw-bold">Cadastre-se</a>
       </p>
     </div>
 
