--- a/index.html
+++ b/index.html
@@ -366,6 +366,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="index.html"></script>
   </body>
 </html>
